Actions
Bug #10667
closedthread_variable_set/get doesn't work for dynamically created symbols
Bug #10667:
thread_variable_set/get doesn't work for dynamically created symbols
Description
Adding the following test to thread_test.rb shows the problem:
def test_thread_variables_work_for_dynamically_created_symbols
t = Thread.new {}.join
key_str = "foo#{rand}"
key_sym = key_str.to_sym
t.thread_variable_set(key_sym, "bar")
assert_equal "bar", t.thread_variable_get(key_str)
assert_equal "bar", t.thread_variable_get(key_sym)
end
Test output:
Updated by nobu (Nobuyoshi Nakada) over 11 years ago
- Description updated (diff)
- Backport changed from 2.0.0: UNKNOWN, 2.1: UNKNOWN, 2.2: UNKNOWN to 2.0.0: DONTNEED, 2.1: DONTNEED, 2.2: REQUIRED
Updated by nobu (Nobuyoshi Nakada) over 11 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
Applied in changeset r49055.
thread.c: fix dynamic symbol keys
- thread.c (rb_thread_variable_get): fix dynamic symbol keys.
rb_check_id() returns non-zero only for static symbols, whereas
thread local variable keys can be dynamic symbols.
[ruby-core:67185] [Bug #10667]
Updated by naruse (Yui NARUSE) over 11 years ago
- Backport changed from 2.0.0: DONTNEED, 2.1: DONTNEED, 2.2: REQUIRED to 2.0.0: DONTNEED, 2.1: DONTNEED, 2.2: DONE
ruby_2_2 r49125 merged revision(s) 49055.
Actions